logs/Slang/generic/number/number_test_73.sv.log
name: number_test_73
description: Test
should_fail: 0
tags: 5.6.4 5.7.1 5.7.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/number/number_test_73.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/number/number_test_73.sv:7:25: error: unknown macro or compiler directive '`DIGITS'
parameter int foo = 32'h`DIGITS;
                        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/number/number_test_73.sv:7:32: error: expected vector literal digits
parameter int foo = 32'h`DIGITS;
                               ^
